[tool.poetry]
name = "beanie-reproduction"
version = "0.1.0"
description = ""
authors = ["TomohiroHiratsuka <tomtombaske@gmail.com>"]
readme = "README.md"
packages = [{include = "beanie_reproduction"}]

[tool.poetry.dependencies]
python = "^3.9"
beanie = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

